# Vera

./: .gitignore  LICENSE  README.md  RUNBOOK.md  pyproject.toml  requirements.txt
evals/: core.json  red_team.json  run_evals.py
knowledge/: hotel_policies.md
livekit/: README.md  create_room.py  create_token.py  env_loader.py  package-lock.json  package.json  start_local_server.sh  talk_server.py  test_env_loader.py  test_talk_server.py
livekit/web/: index.html  styles.css  talk.js
mocks/: demo_call.py  ivr_menu_mock.py  sip-ivr-call-flow.md
pipeline/: README.md  agent.py  config.example.env  deepgram_speech.py  inventory.py  knowledge.py  providers.py  router.py  scale_check.py  smoke_test.py  streaming.py  telemetry.py  test_features.py  voice_loop.py
